@@ -26,3 +26,4 @@ import/list/direct edit
 
 - songs op tracknr volgorde binnen albums, artists alfabetisch?
 - album sort: eerst artiest, dan album
+- title & artist labels should be ellipsizing labels
