@@ -458,6 +458,23 @@ pointer_list_view_select_prev (PointerListView *view)
 }
 
 void
+pointer_list_view_scroll_to (PointerListView *view,
+			     gpointer pointer)
+{
+	GtkTreeIter iter;
+	GtkTreePath *path;
+
+	pointer_list_model_pointer_get_iter (view->model, pointer, &iter);
+	path = gtk_tree_model_get_path (GTK_TREE_MODEL (view->model), &iter);
+
+	gtk_tree_view_scroll_to_cell (GTK_TREE_VIEW (view), path,
+				      gtk_tree_view_get_column (GTK_TREE_VIEW (view), 0),
+				      TRUE, 0.5, 0.5);
+
+	gtk_tree_path_free (path);
+}
+
+void
 pointer_list_view_set_sort_func (PointerListView *view,
 				 GCompareFunc sort_func)
 {
