@@ -73,6 +73,8 @@ void             pointer_list_view_set_keep_selection (PointerListView *view,
 void             pointer_list_view_select_first  (PointerListView *view);
 void             pointer_list_view_select_next   (PointerListView *view);
 void             pointer_list_view_select_prev   (PointerListView *view);
+void             pointer_list_view_scroll_to     (PointerListView *view,
+						  gpointer pointer);
 void             pointer_list_view_set_sort_func (PointerListView *view,
 				                  GCompareFunc sort_func);
 void             pointer_list_view_set_playing   (PointerListView *view,
